[package]
name = "net3_channel"
version = "0.1.0"
authors = ["Łukasz Kurowski <crackcomm@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "^0.4"

tokio = { version = "^1", features = ["time"] }
tokio-util = { version = "^0.6.9", features = ["codec"] }
