[package]
name = "net3_proto_jsonrpc"
version = "14.2.0"
license = "MIT"
authors = [
  "Parity Technologies <admin@parity.io>",
  "Łukasz Kurowski <crackcomm@gmail.com>",
]
edition = "2018"

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_json = { version = "^1.0", features = ["raw_value"] }

net3_msg = { path = "../../message" }
