[package]
name = "net3_rpc_client"
version = "0.1.0"
authors = ["Łukasz Kurowski <crackcomm@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "^0.4"
err-derive = "^0.2.4"

serde = "^1.0"

futures = "^0.3.5"
async-trait = "^0.1.36"
tokio = { version = "^0.2.21", features = ["time"] }
tokio-util = { version = "^0.3.1", features = ["codec"] }
pin-project = "^0.4.23"


tracing = { git = "https://github.com/tokio-rs/tracing.git", rev = "tracing-subscriber-0.2.7", version = "0.1"}
tracing-futures = { version = "0.2.1", git = "https://github.com/tokio-rs/tracing.git", rev = "tracing-subscriber-0.2.7", features = ["futures-01"] }
tracing-attributes =  { git = "https://github.com/tokio-rs/tracing.git", rev = "tracing-subscriber-0.2.7", version = "0.1.2"}

net3_msg = { path = "../../message" }
net3_channel = { path = "../../channel" }
net3_rpc_conn = { path = "../conn" }
net3_rpc_error = { path = "../error" }
