[package]
name = "net3_rpc_conn"
version = "0.1.0"
authors = ["Łukasz Kurowski <crackcomm@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "^0.4"
async-trait = "^0.1.40"
futures = "^0.3.5"
futures-option = "^0.2.0"

net3_msg = { path = "../../message" }
net3_rpc_conn_handler = { path = "handler" }
