[package]
name = "net3_rpc_derive"
version = "0.1.0"
authors = ["Łukasz Kurowski <crackcomm@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1.0.3"
syn = { version = "^1.0.17", features = ["extra-traits"] }
proc-macro2 = "*"
darling = "^0.10.2"
