[package]
name = "net3_rpc_error"
version = "0.1.0"
authors = ["Łukasz Kurowski <crackcomm@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
err-derive = "^0.2.4"

# serde = "^1"
# serde_json = "^1"
# serde_derive = "^1"

net3_msg = { path = "../../message" }
