[package]
name = "net3_rpc_examples"
version = "0.1.0"
authors = ["Łukasz Kurowski <crackcomm@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "^1"
serde_derive = "^1"
async-trait = "*"

net3_msg = { path = "../../message" }
net3_rpc_error = { path = "../error" }
net3_rpc_derive = { path = "../derive" }
net3_rpc_client = { path = "../client" }
net3_rpc_server = { path = "../server" }
net3_codec_json_lines = { path = "../../codec/json-lines" }

tokio = { version = "^1", features = ["full"] }

pretty_env_logger = "*"
