[package]
name = "net3_pubsub"
version = "0.1.0"
authors = ["Łukasz Kurowski <crackcomm@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# failure = "^0.1.5"
# err-convert-macro = "^0.1.1"

serde = "^1.0.0"

tokio = { version = "^0.2.21", features = ["sync", "stream"] }

net3_msg = { path = "../../message" }
net3_channel = { path = "../../channel" }
net3_rpc_client = { path = "../client" }

# ice_msgpack_proto = { path = "../../proto/msgpack" }
