[package]
name = "net3_pubsub"
version = "0.2.0"
authors = ["Łukasz Kurowski <crackcomm@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "^1.0.0"

tokio = { version = "^1", features = ["rt", "sync", "macros"] }
tokio-stream = { version = "^0.1.8", features = ["sync"] }

net3_msg = { path = "../../message" }
net3_channel = { path = "../../channel" }
net3_rpc_client = { path = "../client" }
