[package]
name = "net3_rpc_server"
version = "0.1.0"
authors = ["Łukasz Kurowski <crackcomm@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "^0.4"

async-trait = "^0.1.40"
tokio = { version = "^1", features = ["full"] }
tokio-stream = { version = "^0.1.8", features = ["net"] }
tokio-util = { version = "^0.6.9", features = ["codec"] }

net3_msg = { path = "../../message" }
net3_rpc_client = { path = "../client" }

[dev-dependencies]
net3_codec_json_lines = { path = "../../codec/json-lines" }
